# great-lexicon-war

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/audio/: audio.txt
assets/fonts/: fonts.txt
assets/fonts/fyodor/: ofl.txt
assets/fonts/kroftsmann/: 1001fonts-kroftsmann-eula.txt
assets/fonts/molot/: 1001fonts-molot-eula.txt
assets/maps/: level_01.json  level_01.toml  level_02.json  level_test.toml
assets/sprites/objects/: barriers.json  barriers.toml  objectives.json  objectives.toml  stones.json  (+3 more)
assets/words/: easy.txt  extreme.txt  hard.txt  medium.txt
sprite_sheets/german_soldier/: german_base_walking.piskel  mp40_firing.piskel  mp40_idling.piskel
sprite_sheets/objects/: barrier.piskel  objectives.piskel  stones.piskel  trees.piskel
sprite_sheets/soviet_soldier/: ppsh_firing.piskel  ppsh_walking.piskel  soviet_base_walking.piskel  soviet_soldier_ppsh_idle.piskel
sprite_sheets/terrain/: sping_tileset.piskel  spring_flak_gun.piskel  spring_tile_1.piskel  spring_tile_2.piskel  spring_tile_3.piskel  spring_tile_3_flipped.piskel  spring_tile_4.piskel
sprite_sheets/ui/: button.piskel  button_interact.piskel
src/: components.rs  main.rs  styles.rs  systems.rs  utils.rs
src/game/: mod.rs  resources.rs  systems.rs  utils.rs
src/game_over/: components.rs  interactions.rs  layout.rs  mod.rs
src/level_completed/: components.rs  interactions.rs  layout.rs  mod.rs
src/main_menu/: components.rs  interactions.rs  layout.rs  mod.rs  resources.rs  systems.rs
(+41 files in other folders)
