[package]
name = "great-lexicon-war"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# remove dynamic_linking feature for release build
[dependencies]
bevy = { version = "0.11.0", features = ["dynamic_linking"] }
serde = "1.0.176"
serde_json = "1.0.104"
